@@ -34,7 +34,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -184,12 +184,12 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${version.jaxb}</version>
+            <version>${version.jaxb-api}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
-            <version>${version.jaxb}</version>
+            <version>${version.jaxb-core}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -209,6 +209,9 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <version.weld>2.4.5.Final</version.weld>
+            </properties>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
@@ -223,6 +226,9 @@
         </profile>
         <profile>
             <id>deltaspike-1.8</id>
+            <properties>
+                <version.weld>2.4.5.Final</version.weld>
+            </properties>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
@@ -340,6 +346,31 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+
+        <profile>
+            <id>post-10-unsafe-code-non-mac</id>
+            <activation>
+                <jdk>[11,)</jdk>
+                <file>
+                    <exists>${jdk8.home}${file.separator}jre${file.separator}lib${file.separator}rt.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <surefire.jvm.params>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.params>
+            </properties>
+        </profile>
+        <profile>
+            <id>post-10-unsafe-code-mac</id>
+            <activation>
+                <jdk>[11,)</jdk>
+                <file>
+                    <exists>${jdk8.home}${file.separator}jre${file.separator}lib${file.separator}classes.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <surefire.jvm.params>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.params>
+            </properties>
         </profile>
     </profiles>
 
